changed burger_name to name

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
   <div class="form-group">
     <label for="devoured">Devoured?</label><br>
     <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Awake
+    <input type="radio" name="devoured" value="0"> Eat Me!
   </div>
 
   <button type="submit">Add Burger</button>
