--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		
 		<title>Eat a Burger!</title>
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lilita+One&display=swap" rel="stylesheet">
+		
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
 	</head>
